aws-app-mesh/finance/finance-server-V2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-server-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finance-server
  template:
    metadata:
      name: finance-server
      labels:
        app: finance-server
        version: v2
    spec:
      serviceAccountName: finance-service
      containers:
        - name: finance-server
          image: hashicorp/http-echo:latest
          args:
            - -text="finance service servicing v2"
            - -listen=:8080
          ports:
            - containerPort: 8080
              name: http
