aws-app-mesh/finance/finance-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: finance-server
spec:
  selector:
    app: finance-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      appProtocol: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finance-server
  template:
    metadata:
      name: finance-server
      labels:
        app: finance-server
        version: v1
    spec:
      serviceAccountName: finance-service
      containers:
        - name: finance-server
          image: hashicorp/http-echo:latest
          args:
            - -text="finance service servicing"
            - -listen=:8080
          ports:
            - containerPort: 8080
              name: http
