aws-app-mesh/finance/virtualService.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: finance
spec:
  awsName: finance-server.app-mesh-demo.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: finance
